# c4AuthRecovered

./: CMakeLists.txt  README.md
docs/: Startup.md
src/: WinMain.cpp  WinMain.h  Window.cpp  Window.h  main.cpp
src/Application/: Application.cpp  Application.h
src/Crypto/: Crypto.cpp  Crypto.h
src/Exception/: Exception.cpp  Exception.h
src/Network/: Network.cpp  Network.h
